fix: OurTeam fix Overflow

--- a/src/components/OurTeam/index.module.scss
+++ b/src/components/OurTeam/index.module.scss
@@ -28,31 +28,36 @@
     align-items: center;
     display: flex;
     flex-direction: row;
+    overflow: hidden;
     overflow-x: scroll;
     scroll-behavior: smooth;
     justify-content: left;
     gap: 20px;
-
+    @media screen and (min-width: 874px) {
+      justify-content: center;
+      gap: 20px;
+      overflow: hidden !important;
+    }
     @media screen and (min-width: 1000px) {
       justify-content: center;
       gap: 50px;
+      overflow: hidden !important;
     }
     .containerMember {
-      margin-bottom: 20px;
       height: 250px;
       display: flex;
       flex-direction: column;
       position: relative;
       .flagPerson {
-        @media screen and (min-width: 1000px) {
+        @media screen and (min-width: 874px) {
           &::before {
             content: "";
             background-color: #ebebeb;
             position: absolute;
             width: 50px;
             height: 50px;
-            rotate: 45deg;
-            bottom: -60px;
+            clip-path: polygon(50% 0%, 0 52%, 100% 52%);
+            bottom: -30px;
             left: 35%;
           }
         }
@@ -143,7 +148,6 @@
         display: flex;
         gap: 15px;
         font-size: 20px;
-
         text-align: end;
         justify-content: flex-end;
       }
